tests/rosetta/out/Java/avl-tree.error
javac error: exit status 1
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:26: error: <identifier> expected
    static Map<String,any> double(Map<String,any> root, int dir) {
                          ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:26: error: <identifier> expected
    static Map<String,any> double(Map<String,any> root, int dir) {
                                 ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:54: error: '.class' expected
        return double(root, opp(dir));
                     ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:54: error: not a statement
        return double(root, opp(dir));
                      ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:54: error: ';' expected
        return double(root, opp(dir));
                          ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:54: error: ';' expected
        return double(root, opp(dir));
                                    ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:93: error: '.class' expected
            return new NodeDone(double(root, dir), false);
                                      ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:93: error: not a statement
            return new NodeDone(double(root, dir), false);
                                       ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:93: error: ';' expected
            return new NodeDone(double(root, dir), false);
                                           ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:93: error: not a statement
            return new NodeDone(double(root, dir), false);
                                             ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:93: error: ';' expected
            return new NodeDone(double(root, dir), false);
                                                ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:116: error: illegal start of type
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                            ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:116: error: illegal start of expression
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                             ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:116: error: ')' or ',' expected
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                              ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:116: error: ';' expected
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                                  ^
/tmp/TestMochiToJavaavl-tree3596232353/001/AvlTree.java:116: error: ';' expected
            data = (int)(Integer.parseInt(((?)heir).get("Data")));
                                                               ^
16 errors
